--- a/src/StockOrderBook/StockOrderBook.csproj
+++ b/src/StockOrderBook/StockOrderBook.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Entities\OrderType.cs" />
     <Compile Include="Entities\TradeType.cs" />
+    <Compile Include="Entities\Validity.cs" />
     <Compile Include="Strategies\AskAllOrNoneTradingStrategy.cs" />
     <Compile Include="Entities\Ask.cs" />
     <Compile Include="Entities\Bid.cs" />
@@ -49,7 +50,9 @@
     <Compile Include="Entities\Trade.cs" />
     <Compile Include="OrderBook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategies\AskTradingStrategy.cs" />
     <Compile Include="Strategies\BidAllOrNoneTradingStrategy.cs" />
+    <Compile Include="Strategies\BidTradingStrategy.cs" />
     <Compile Include="Strategies\TradeExecutionResult.cs" />
     <Compile Include="Strategies\TradeResult.cs" />
     <Compile Include="TradeBook.cs" />
