--- a/src/StockOrderBook/StockOrderBook.csproj
+++ b/src/StockOrderBook/StockOrderBook.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Util\BidOrderComparer.cs" />
     <Compile Include="Util\OrderQueue.cs" />
     <Compile Include="Util\TopOrderChanged.cs" />
+    <Compile Include="Strategies\BaseTradingStrategy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
