--- a/src/StockOrderBook/StockOrderBook.csproj
+++ b/src/StockOrderBook/StockOrderBook.csproj
@@ -43,20 +43,26 @@
     <Compile Include="Entities\PriceType.cs" />
     <Compile Include="Entities\TradeType.cs" />
     <Compile Include="Entities\TimeInForce.cs" />
-    <Compile Include="Strategies\AskAllOrNoneTradingStrategy.cs" />
     <Compile Include="Entities\Ask.cs" />
     <Compile Include="Entities\Bid.cs" />
     <Compile Include="Entities\Order.cs" />
     <Compile Include="Entities\Trade.cs" />
     <Compile Include="OrderBook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strategies\AskFillOrKillStrategy.cs" />
-    <Compile Include="Strategies\AskTradingStrategy.cs" />
-    <Compile Include="Strategies\AllOrNoneTradingStrategy.cs" />
-    <Compile Include="Strategies\BidFillOrKillStrategy.cs" />
-    <Compile Include="Strategies\BidTradingStrategy.cs" />
     <Compile Include="Entities\TradeExecutionResult.cs" />
     <Compile Include="Entities\TradeResult.cs" />
+    <Compile Include="Strategies\Ask\AskMarketStrategy.cs" />
+    <Compile Include="Strategies\Ask\AskIOCStrategy.cs" />
+    <Compile Include="Strategies\Ask\AskAONStrategy.cs" />
+    <Compile Include="Strategies\Ask\AskFOKStrategy.cs" />
+    <Compile Include="Strategies\Ask\AskTradingStrategy.cs" />
+    <Compile Include="Strategies\Bid\BidMarketStrategy.cs" />
+    <Compile Include="Strategies\Bid\BidIOCStrategy.cs" />
+    <Compile Include="Strategies\Bid\BidAONStrategy.cs" />
+    <Compile Include="Strategies\Bid\BidFOKStrategy.cs" />
+    <Compile Include="Strategies\Bid\BidTradingStrategy.cs" />
+    <Compile Include="Strategies\ITradingStrategyProvider.cs" />
+    <Compile Include="Strategies\TradingStrategyProvider.cs" />
     <Compile Include="TradeBook.cs" />
     <Compile Include="Strategies\ITradingStrategy.cs" />
     <Compile Include="Util\AskOrderComparer.cs" />
@@ -65,6 +71,7 @@
     <Compile Include="Util\TopOrderChanged.cs" />
     <Compile Include="Strategies\BaseTradingStrategy.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
